remove JSPELL completely; upgrade to Java 11; fix bug in dependency parser; new frequencies file