@@ -35,9 +35,8 @@
 
     <licenses>
         <license>
-            <name>MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
-            <distribution>repo</distribution>
+            <name>GNU General Public License v3 (GPLv3)</name>
+            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
         </license>
     </licenses>
 
@@ -200,7 +199,8 @@
         <!-- ============================================== -->
         <!-- ================ JAVA VERSION ================ -->
         <!-- ============================================== -->
-        <java.version>1.8</java.version>
+        <java.release>11</java.release>
+        <java.version>1.11</java.version>
         <!-- ============================================== -->
         <!-- =============== MANIFEST DATA ================ -->
         <!-- ============================================== -->
@@ -209,13 +209,19 @@
         <!-- =========== DEPENDENCIES VERSIONS ============ -->
         <!-- ============================================== -->
         <jackson-core.version>2.11.0</jackson-core.version>
-        <guava.version>28.1-jre</guava.version>
+        <!--<guava.version>28.1-jre</guava.version>-->
         <junit.jupiter.version>5.4.0</junit.jupiter.version>
         <mockito.version>3.1.0</mockito.version>
-        <log4j.version>2.12.1</log4j.version>
+        <!--<log4j.version>2.12.1</log4j.version>-->
         <slf4j.version>1.7.28</slf4j.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <stanford-nlp.version>3.9.2</stanford-nlp.version>
+        <!-- ============================================== -->
+        <!-- ============== PLUGINS VERSIONS ============== -->
+        <!-- ============================================== -->
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
+        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
         <!-- ============================================== -->
         <!-- ================= MAVEN SITE ================= -->
         <!-- ============================================== -->
@@ -245,21 +251,15 @@
         <dependency>
             <!-- Jackson JSON -->
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>${jackson-core.version}</version>
-        </dependency>
-        <dependency>
-            <!-- Jackson JSON -->
-            <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson-core.version}</version>
         </dependency>
-        <dependency>
-            <!-- Guava -->
+        <!-- <dependency>
+            Guava
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
-        </dependency>
+        </dependency> -->
         <dependency>
             <!-- Apache Commons -->
             <groupId>org.apache.commons</groupId>
@@ -276,40 +276,40 @@
         <!-- ================== LOGGERS =================== -->
         <!-- ============================================== -->
         <dependency>
-            <!-- Log4j api -->
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
-        <dependency>
-            <!-- Log4j core -->
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>${log4j.version}</version>
+            <!-- Slf4j api -->
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <!-- ============================================== -->
         <!-- ======= TEST ENVIRONMENT DEPENDENCIES ======== -->
         <!-- ============================================== -->
         <dependency>
+            <!-- JUnit Jupiter API -->
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <!-- JUnit Jupiter Engine -->
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <!-- JUnit Jupiter Platform -->
+        <!-- <dependency>
+            JUnit Jupiter Platform
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-runner</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <!-- Mockito -->
+        </dependency> -->
+        <!-- <dependency>
+            Mockito
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
             <scope>test</scope>
-        </dependency>
+        </dependency> -->
     </dependencies>
 
     <!-- ********************************************** -->
@@ -319,6 +319,16 @@
     <build>
         <defaultGoal>clean package install</defaultGoal>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <release>${java.release}</release>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <!-- Changes -->
                 <!-- Takes care of the changes log -->
@@ -349,6 +359,27 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>${maven-dependency-plugin.version}</version>
             </plugin>
             <plugin>
                 <!-- Site -->
